--- a/posts/what-is-called-free-speech/post.mdx
+++ b/posts/what-is-called-free-speech/post.mdx
@@ -1,112 +1,121 @@
 ---
-title: "What Is Called Free Speech?"
+title: "What is called free speech?"
 
-blurb: "In which I argue that we know less about human freedom than we think we know"
+blurb: "Thought experiments in not knowing"
 date: 2025-01-12
 draft: true
-tags: ["philosophy", "freedom", "free speech", "aporia", "thought experiments"]
+tags:
+  [
+    "philosophy",
+    "freedom",
+    "free speech",
+    "aporia",
+    "thought experiments",
+    "ethics",
+    "politics",
+  ]
 ---
 
-My country has free speech on the brain. It is not only a long-standing principle of governance in the Anglo-American sphere, but also a timely topic in our world of changing social mores, the emergence of private megaplatforms, and a climate of political upheaval. There are any number of hot-button debates about free speech we could could dig into...
+My country has free speech on the brain. I don't particularly wish to wade into any of the current controversies— I had my fill of internet flame wars long ago. But I _am_ interested in a deeper question:
 
-...but naturally, I don't want to talk about any of that! (I had my fill of political debate and internet flame wars in high school and have rather grown out of it.) Today, I wish instead to skate gleefully around the edges of these controversies en route to a far more interesting question:
+**What is this thing we call "free speech"?**
 
-**What is this thing we call "free speech"? When we argue about free speech, what is it that we're truly arguing _about_?**
+You probably think you know what "free speech" means. By the end of this post, you might not be so sure. I'm going to give you a series of thought experiments, cases designed to pump your intuitions[^intuition-pump] about what free speech is and isn't. We'll test two common versions of the concept, and see how they fare.
 
-I'll start us with two versions of free speech that you've likely heard advocated, or criticized, in the news media. Then, for each of these versions, I'll provide you a series of [intuition pumps](https://en.wikipedia.org/wiki/Intuition_pump)— thought experiments intended to evoke certain responses from you. With these, I hope to draw out our natural intuitions about what it is that we mean by "free speech". If we are lucky, our intuitions will line up nicely with one another, and we'll find clarity!
+[^intuition-pump]: "[Intuition pump](https://en.wikipedia.org/wiki/Intuition_pump)" is a term from Daniel Dennett: a thought experiment designed less to illustrate a concept, than to provoke your intuitions in a particular direction.
 
-Unfortunately, the results will show that we are not so lucky. Our intuitions will not neatly align for or against either of these versions of free speech, nor will they align with one another. We will end up less sure about what free speech is than when we began.
+## Version 1: Freedom from restriction
 
-Ready? Let's start with the first version of free speech.
+"My speech is free when the government places no restrictions on what I can say. It is not censorship when a private agent, such as Facebook or a television channel, restricts what I may say via their platform."
 
-## "My speech is free when the government places no restrictions on what I can say. It is not censorship when a private agent, such as Facebook or a television channel, restricts what I am allowed to say via their platform."
+This version would have us believe that freedom is about law and governance. I am unfree insofar as the law binds me from speaking, and free insofar as the law permits me. On its face, this feels fairly sensible[^1A]! You may even have heard it before in debates about disinformation or social media moderation. Let's see how well it comports to our intuitions.
 
-This version of free speech would have us believe that freedom is about law and governance. I am unfree insofar as the law binds me from speaking, and free insofar as the law permits me. On its face, this feels fairly sensible! You may have heard this version come up in debates about efforts to combat disinformation, or about the moderation policies of various social media platforms. Let's see how well it comports to our intuitions.
+[^1A]: Indeed, in an American context, this is roughly the First Amendment reading of free speech.
 
 Consider first the case of Sam the Spammer.
 
-> Nothing brings Sam as much joy as sending out billions of identical messages promoting his discount widget business. He sends out a constant stream of misleading and disruptive posts day and night, to every social media platform, comment section, web marketplace, and email inbox he can get his hands on. There are no government restrictions on Sam's speech, but people don't particularly appreciate being flooded with Sam's messages. So, social platforms suspend his accounts, marketplaces take down his listings, and email providers filter his messages as spam. Sam is indignant, and argues his free speech has been gravely restricted.
+> Nothing brings Sam as much joy as sending billions of messages promoting his discount widget business. He sends a constant stream of misleading and disruptive posts day and night, to every social media platform, comment section, web marketplace, and email inbox he can get his hands on. There are no government restrictions on Sam's speech, but people don't particularly appreciate being flooded with Sam's messages. Social platforms suspend his accounts, marketplaces take down his listings, and email providers filter his messages as spam. Sam is indignant, and argues his free speech has been gravely restricted.
 
-**Do you think Sam is correct?** I sure don't! Sam's essential liberties have not been infringed. We wouldn't blame anyone for sending Sam's messages straight to the spam filter. If Sam wishes to freely promote his widget business, we'd suggest he try a less disruptive method, such as the ordinary advertising and marketing strategies that other businesses pursue.
+**Is Sam correct?** I don't think so! Sam's essential liberties have not been infringed. We wouldn't blame anyone for sending Sam's messages straight to the spam filter. If Sam wishes to freely promote his widget business, we'd suggest he try a less disruptive method, such as the ordinary advertising and marketing strategies that other businesses pursue.
 
 Let's consider a second case, that of Cheryl the Chef.
 
-> Cheryl has just discovered a recipe for pumpkin pie that will absolutely knock your socks off, and she'd love to share it with the world. There is no law preventing Cheryl from doing so. Unfortunately, the food industry in Cheryl's world is fully dominated by MegaCorp Nutritional Paste. MegaCorp holds a _lot_ of sway in society, with omnipresent licensing and promotional deals across all industries. The result: social platforms delete all content related to cooking, publishers refuse to publish cookbooks, and television stations take down all cooking shows. Cheryl resolves to distribute the recipe herself, only to discover that all the ISPs in her region take down recipe blogs and filter out food-related emails, shipping companies will not ship food-related content, and even home printers have been programmed to refuse to print food-related keywords. Ultimately, Cheryl is unable to share the joy of food except through word-of-mouth or underground hand-copied samizdat networks. Cheryl argues that her free speech has been gravely restricted.
+> Cheryl the Chef has a recipe blog she's proud of. Unfortunately, Joe Byson, CEO of Byson Food Inc., is offended by Cheryl's criticisms of his frozen meat products. One day, her hosting provider takes down her blog— not for legal reasons, but because Byson, their largest advertiser, complained. She moves to a new host; they do the same. She tries posting to social media instead, but her posts get flagged and removed (Byson again). Email newsletters, physical publishing, in-person events... every platform she tries quickly shuts her out, through a shared set of business pressures that exclude her. There's no law against what Cheryl wants to say. But she can't say it.
 
-**Do you think Cheryl is correct?** I do! Cheryl has been prevented from speaking, and the restrictions placed on her feel wildly unreasonable. It doesn't particularly seem to matter whether the restrictions came from a government or from MegaCorp, they are unjust.
+**What about Cheryl?** I think she's been censored. Cheryl has been prevented from speaking, and the restrictions placed on her feel wildly unreasonable. It doesn't particularly seem to matter whether the restrictions came from a government or from Byson, they are unjust. We ought to be free to criticize food products we dislike without being frozen out of all communications.
 
-From Cheryl, let's move to Beryl the Chef.
+From Cheryl, let's move to Beryl the Baker.
 
-> Just like Cheryl, Beryl has a wondrous pumpkin pie recipe she wishes to share. Unlike Cheryl and her dystopia, Beryl lives in the world that you and I inhabit. One afternoon, Beryl enters your home uninvited. She claims she has the right to host cooking classes in your kitchen, use your computer to type recipes and post them to your website, and put up signs advertising her cooking in your yard. You tell her to leave your house. Beryl argues that this is censorship, and you have violated her right to free speech.
+> Just like Cheryl, Beryl has a recipe blog she wishes to share. One afternoon, Beryl enters your home uninvited. She claims she has the right to use _your_ home to promote her blog: to host cooking classes in your kitchen, use your computer to type recipes and post them to your website, and put up advertising in your yard. You tell her to leave your house. Beryl argues that this is censorship, and you have violated her right to free speech.
 
-**Do you think Beryl is correct?** I most certainly don't! Her right to free speech doesn't include a right to use your kitchen. She is free to do these things in her own home. It is in no way censorship to tell her to stop trespassing andleave your home.
+**What do you think about Beryl?** I don't think her right to free speech includes a right to use your kitchen. She is free to do these things in her own home. It is in no way censorship to tell her to cease trespassing and exit your abode.
 
 What clarity have we gained on private agents and free speech? Is it or isn't it censorship when a private platform restricts speech? Well... it's not so clear! We seem to agree on a number of things that pull us in different directions:
 
 - At least sometimes, private restrictions **do not** impinge on free speech. We don't think Sam or Beryl are subject to unjust restrictions on their liberties.
 - At least sometimes, private restrictions **do** impinge on free speech. Cheryl is being censored by private entities, and we don't think that's just.
 - The content and method of the speech matters. Though it is unjust for private entities to censor Cheryl, there's nothing untoward about those same entities deleting Sam's spam. There seems to be some sphere of discourse which is considered acceptable or ordinary, and ought not be restricted. But there also seem to be forms of discourse outside that sphere, which are OK to privately restrict.
-- Precisely which private agent is restricting the speech also matters. We seem concerned about the actions of entities like ISPs, publishers, television outlets, shippers, or social media sites. But we don't seem particularly concerned about your choice to kick Beryl out of your kitchen. We could speculate on why that is: Perhaps when entities reach a certain size or level of public involvement, they become more "government-like" and develop different obligations from other private actors. Or perhaps we are _always_ balancing the freedom of the speaker against a complex web of freedoms and obligations of other agents, and that balance differs from case to case. But regardless of the reason, _something_ clearly differs between various private agents, and that something is ethically relevant.
+- Precisely which private agent is restricting the speech also matters. We seem concerned about the actions of entities like ISPs, publishers, television outlets, social media sites, or email providers. But we don't seem particularly concerned about your choice to kick Beryl out of your kitchen.
 
-We haven't gained a great deal of clarity, have we? Perhaps this just wasn't the right angle of attack. Lets try our hand at a different version of free speech.
+We haven't gained much clarity. Perhaps this just wasn't the right angle of attack. Let's try our hand at a different version of free speech.
 
-## "Free speech is when I can say whatever I want without consequences. If I suffer from social sanction or ostracism as a result of my speech, I have been censored."
+## Version 2: Freedom from consequences
 
-This version of free speech is about results. I am unfree insofar as I am punished for my speech, and free insofar as I may speak without suffering harm. This feels pretty plausible! You have likely heard this version come up when public figures face backlash after adopting controversial views. Perhaps you've also encountered it when marginalized groups face public judgement for their speech.
+"Free speech is when I can say whatever I want without consequences. If I suffer from social sanction or ostracism as a result of my speech, I have been censored."
+
+This version of free speech is about results. I am unfree insofar as I am punished for my speech, and free insofar as I may speak without suffering harm. This feels pretty plausible! You may have heard this version come up when public figures face backlash after adopting controversial views[^cancel]. Perhaps you've also encountered it when marginalized groups face public judgement for their self-expression[^LGBT].
+
+[^cancel]: The Internet "cancel culture" debate is roughly this.
+
+[^LGBT]: In an American context, consider _[National Gay Task Force v. Board of Education](https://en.wikipedia.org/wiki/National_Gay_Task_Force_v._Board_of_Education)_, or [Don't Ask, Don't Tell](https://en.wikipedia.org/wiki/Don%27t_ask,_don%27t_tell).
 
 Let's first consider the case of Steve the Star Wars fan:
 
-> Steve is a car salesman who loves the Star Wars franchise. He spends much of his free time watching and reading Star Wars media, writing fanfiction, and engaging with other fans on the Internet. Unfortunately for Steve, his world is dominated by Trekkie extremists, who have a sharply negative opinion of Star Wars. One day, Steve's boss discovers Steve's anonymous fanblog. Steve is summarily fired from the car dealership and blacklisted from the industry. The news spreads among the community, and Steve is disowned by his family and friends, and banned from entering most local businesses. Steve argues that these consequences are unjust, and that he has been censored.
+> Steve is a car salesman who loves the Star Wars franchise. He spends his free time watching and reading Star Wars media, writing fanfiction, and engaging with other fans on the Internet. Unfortunately for Steve, his city is dominated by Trekkie extremists, who have a sharply negative opinion of Star Wars. One day, Steve's boss discovers Steve's anonymous fanblog. Steve is summarily fired from the car dealership and blacklisted from the industry. The news spreads among the community. Steve is disowned by his family and friends, and banned from entering most local businesses. Steve argues that these consequences are unjust, and that he has been censored.
 
-**Do you think Steve is correct?** I do! Condemning a person to a life of unemployment, segregation, and ostracism simply for liking a different sci-fi franchise sounds wildly unjust. We would not like to live an a world like this.
+**Is Steve being censored?** I think so. Condemning a person to a life of unemployment, segregation, and ostracism simply for liking a different sci-fi franchise sounds wildly unjust. We would not like to live in a world like this.
 
-Let's move from Steve, to the similar case of Beav.
+Now consider Beav:
 
-> Similar to Steve, Beav is a car salesman who loves Star Wars. Unlike Steve, Beav lives in our world. But Beav likes Star Wars a little _too_ much, to the point that he is incapable of focusing on anything else. He dominates every conversation with incessant chatter about Jedi lore. At work, he refuses to sell cars, preferring to subject all customer to Star Wars banter until they leave. Beav's conduct leads to awful sales, and causes Beav to get fired for poor performance. His circle of friends dwindles to only those who can tolerate his fixation, and his family stops inviting him to gatherings. Beav argues that these consequences are unjust, and that he has been censored.
+> Similar to Steve, Beav is a car salesman who loves Star Wars. Unlike Steve, Beav lives in our world. But Beav likes Star Wars a little _too_ much, to the point that he is incapable of focusing on anything else. He dominates every conversation with incessant chatter about Jedi lore. At work, he subjects all customers to Star Wars banter until they leave. Beav's conduct leads to awful sales, and causes Beav to get fired for poor performance. His circle of friends dwindles to only those who can tolerate his fixation, and his family stops inviting him to gatherings. Beav argues that these consequences are unjust, and that he has been censored.
 
-**Do you think Beav is correct?** I don't! While Beav is free to like Star Wars as much as he likes, that doesn't give him a license to shirk work, nor does it obligate us to listen. It's perfectly reasonable for his employer to expect that his speech at work conforms to his job expectations. It's equally reasonable for his friends and family to be upset that they can't get a word in edgeways, and stop inviting him.
+**Has Beav earned his consequences?** Unlike Steve, I think he has. While Beav is free to like Star Wars as much as he likes, that doesn't give him a license to shirk work, nor does it obligate us to listen. It's perfectly reasonable for his employer to expect that his speech at work conforms to his job expectations. It's equally reasonable for his friends and family to be upset that they can't get a word in edgeways, and stop inviting him.
 
-Enough about Star Wars. Let's consider a different case, that of Jim the Jerk.
+Enough about Star Wars. Now consider Jim the Jerk.
 
-> Jim is a car salesman, and a cruel and disagreeable person. Everyone he meets, he berates. He hollers vulgarities as walks through town. He insults all the customers at his workplace. He even subjects all his friends and family members to constant verbal abuse. One day, everyone gets fed up. Jim gets fired, because his constant insults toward customers are ruining the whole car dealership. His family and friends get tired of his abuse and disown him, and he gets barred from most local bars and restaurants for his pervasive conduct issues. Jim aregue that these consequences are unjust, and that he has been censored.
+> Jim is a car salesman, and a cruel and disagreeable person. Everyone he meets, he berates. He hollers vulgarities as he walks through town. He insults all the customers at his workplace. He even verbally abuses his friends and family members. One day, everyone gets fed up. Jim gets fired, because his constant insults toward customers are ruining the whole dealership. His family and friends get tired of his abuse and disown him, and he is barred from most local bars and restaurants for his pervasive conduct issues. Jim argues that these consequences are unjust, and that he has been censored.
 
-**Do you think Jim is correct?** I don't! A right to free speech does not imply an obligation to be friends with jerks, or to employ people with conduct problems. Jim is free to be as much of a jerk as he likes, but we are equally free to reject him because of it.
+**What do you think about Jim?** I don't think his rights were violated. A right to free speech does not imply an obligation to be friends with jerks, or to employ people with conduct problems. Jim is free to be as much of a jerk as he likes, but we are equally free to reject him because of it.
 
-One last case. We move from Jim, to Tim.
+One last case.
 
-> Just like Jim, Tim is a cruel and disagreeable car salesman, who insults and abuses everyone he meets. Unlike Jim, Tim's community feels even more strongly about politeness. (Perhaps they are Canadian?) One day, everyone gets fed up with Tim. They haul him to the town square and have him drawn and quartered. Tim slowly dies in agony as his bodily fluids paint the city streets. As he dies, Tim howls that these consequences are unjust, and that he has been censored.
+> Just like Jim, Tim is a cruel and disagreeable car salesman, who insults everyone he meets. One day, a coworker gets truly fed up with Tim. They confront him as he leaves work, and shoot him dead. As he dies, Tim howls that these consequences are unjust, and that he has been censored.
 
-**Do you think Tim is correct?** I think he's at least partially correct! Being an incorrigible jerk is certainly a good reason to fire Tim from a job, or end a friendship with Tim. But it's **not** a good reason to publicly torture Tim to death. We might disagree about whether or not this is censorship specifically, but I hope we'd agree that it's unjust.
+**How about Tim?** I think he's at least partially correct. Being an incorrigible jerk is certainly a good reason to fire Tim from a job, or end a friendship with Tim. But it's **not** a good reason to shoot Tim. We might disagree about whether or not this is _censorship_ specifically, but I hope we'd agree that it's _unjust_.
 
 What clarity have we gained on free speech and consequences? Is it or isn't it censorship when a speaker faces negative consequences for their speech? Again... it's not so clear!
 
 - At least sometimes, negative consequences for speech **do** impinge on free speech. We think Steve is right to complain about his treatment.
 - At least sometimes, negative consequences for speech **do not** impinge on free speech. We think that Jim has been treated fairly. His verbal mistreatment of others has rightly led to their rejection.
 - The manner and place of the speech matters. While Steve and Beav both have the right to speak about Star Wars, Beav's car dealership isn't the right place for it, and Beav's domineering long-windedness is not the right manner. Speech with the same content might rightly lead to different consequences in different situations.
-- The scale of the consequences matters. It is just for Jim to get fired for his jerkiness, but it is _not_ just for Tim to get drawn and quartered for the same jerkiness.
+- The scale of the consequences matters. It is just for Jim to get fired for his jerkiness, but it is _not_ just for Tim to get shot for the same jerkiness.
 
 ## What, then, is this thing we call "free speech"?
 
-We can try to piece together what we've learned into a definition... but I really don't think we'll find it very satisfying. I arrive at something like this:
+Let's try to synthesize what we've learned:
 
 > "Free speech is when I can speak about most things, without undue public or private restriction beyond what is appropriate for the particular venue, and without suffering consequences that are inappropriate or out of proportion to my speech, within reason when taking into account the content and manner of the speech in question."
 
-Clear as mud, right? We're left with so many weasel words that it's not clear we're saying much at all, and we _certainly_ haven't reached a principle that will help us arbitrate any free speech controversies. But it's not obvious that we can do any better without conflicting with one of our intuitions from above!
+Clear as mud. We've ended up with so many weasel words that we're not saying much at all. And it's not obvious that we can do any better without conflicting with our own intuitions.
 
-## Did we learn anything at all here?
+Perhaps the disagreements we have over free speech are, at base, disagreements over deeper sociopolitical questions:
 
-I'm a lot more interested in what we _un_-learned. My task is a Socratic one. You and I probably came into this conversation feeling that we had a pretty clear idea what we mean when we say "free speech". If I've done my job right, if I've chosen convincing examples and accurately divined your intuitions, then we no longer feel clear at all! We've been reduced to a state of _[aporia](https://en.wikipedia.org/wiki/Aporia)_— what seemed clear is now murky and indistinct, and our search for answers has only led us to more questions.
-
-I put it to you that it's only natural that free speech is a hot-button issue, when we ourselves struggle to understand what we mean by it. I further put it to you that many of the disagreements we have over free speech are, at base, disagreements over many of the questions we've touched on above:
-
-- What sorts of speech and actions are and are not within the sphere of public acceptability?
-- What shape should a given community have? Who is and is not included in it? What sorts of conduct should it promote and discourage? Who owns or leads it, and what obligations do they have toward its members?
-- What degree of social disruption ought societies to tolerate? What type and degree of social sanction should those who exceed this tolerance suffer?
+- What content falls within the sphere of public normalcy? How much deviation from that norm is acceptable?
+- What shape should a community have? Who is included in it? Who leads it, and what obligations do they have toward its members?
+- What degree of social disruption should we tolerate, and what sanctions should follow?
 - How much control should private agents have over the public commons?
-- Which actions and words are suited to which times and places?
+- Which words are suited to which times and places?
 
-These questions aren't ones with obvious answers. Rather, they are deeply contingent and subtle. Neither can we resolve these questions with further appeals to free speech. We can only do so by applying further ethical, political, legal, or sociological principles.
+These aren't questions with obvious answers. Neither can we resolve these questions with further appeals to free speech. We can only resolve them through ethics, politics, and difficult conversation.
 
-I truly don't wish to convince you in any particular way about how to resolve the free speech controversies of today. Nor do I wish to sell you a grand theory of freedom that explains everything. I don't believe that I _can_! Perhaps someday, someone wiser than I will dream up a clever definition of free speech that gets it bang on the money. But I am not that person. I am here to tear down, not to build. All I can do is help you banish your illusions.
-
-If you've found any of this convincing, I ask that the next time you argue about freedom (or about political claims more generally), you approach it with a little more intellectual humility. I ask that you apply a little more skepticism, not just to others' claims but to your own. And I ask that you lean a little bit more on questions and curiosity, and a little bit less on answers and certainty. Are you willing to accept the wisdom of not knowing?
+That might feel dissatisfying. That's OK; I came here to tear down, not to build. If I've done my job, you're less sure what "free speech" means than when you started. That discomfort, viewed rightly, is a boon. "Free speech", you see, is a powerful phrase. It has the ring of a settled principle, something foundational and non-negotiable. It gets invoked like a magic spell, as though saying the words alone should end the conversation. But, as we've seen, what looked like a single principle turned out to be a knot of deeply contingent ethical, political, and social questions. So, this [aporia](https://en.wikipedia.org/wiki/Aporia) that you're feeling? Consider it something akin to an immunization against loose thought. When someone invokes "free speech" as though saying the words settles the matter, they're flattening that complexity into a slogan. The questions don't go away when we stop asking them. We'd do better to ask them honestly.
